# activitypub

./: .hgignore  LICENSE  README.md  activitypub.cabal  cabal.project  stack.yaml
.github/workflows/: test.yml
configurations/: ghc-8.10.project  ghc-9.0.project  ghc-9.2.project
src/: Lib.hs
src/Network/ActivityPub/: Activity.hs  Actor.hs  Core.hs  Object.hs  Properties.hs
src/Network/ActivityPub/Vocabulary/: Activity.hs  Actor.hs  Core.hs  Object.hs  Properties.hs
test/: Spec.hs
