name:                activitypub
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LukeHoersten/activitypub#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Hoersten
maintainer:          luke@hoersten.org
copyright:           2018 Luke Hoersten
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

-- executable activitypub-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , activitypub
--   default-language:    Haskell2010

test-suite activitypub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , activitypub
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LukeHoersten/activitypub
